--- a/assets/styles/style1.css
+++ b/assets/styles/style1.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Comic Neue', cursive;
+
+}
 header figure{
     background: url(../img/design1_image1.jpg);
     height: 400px;
@@ -6,14 +14,43 @@ header figure{
 }
 header h1{
     position: absolute;
-    top: 2px;
-    left: 400px;
-    font-size: 50px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 500;
-    font-style: italic;
+    top: 22px;
+    left: 10px;
+    font-size: 70px;
+    color: brown;
+    font-weight: bold;
+    font-style: normal;
 
 }
 h2{
     background-color: blue;
+    text-align: center;
+    margin: 3px;
 }
+.logo{
+    position: absolute;
+    right: 10px;
+    width: 150px;
+    top: 350px;    
+}
+header a{
+    display: block;
+    border: 2px, solid, blue ;
+    padding: 50px;
+    box-sizing: border-box;
+    }
+    a:hover{
+        color: brown;
+    }
+    .foto{
+        position: absolute;
+        top: 900px;
+        left: 20;
+        width: 200px;
+    }
+    #texto{
+        position: absolute;
+        left: 300px;
+        top: 500px;
+        width: 500px;
+    }
