--- a/assets/styles/style1.css
+++ b/assets/styles/style1.css
@@ -1,18 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Comic Neue', cursive;
 
 }
-header figure{
+
+header figure {
     background: url(../img/design1_image1.jpg);
+    top: 20px;
     height: 400px;
-    background-size: cover;
+   background-size: cover;
     background-position: center;
+    background-position: initial;
 }
-header h1{
+
+header h1 {
     position: absolute;
     top: 22px;
     left: 10px;
@@ -22,35 +27,44 @@ header h1{
     font-style: normal;
 
 }
-h2{
+
+h2 {
     background-color: blue;
     text-align: center;
     margin: 3px;
 }
-.logo{
+
+h3 {
+    text-emphasis: bolt;
+}
+
+.logo {
     position: absolute;
     right: 10px;
     width: 150px;
-    top: 350px;    
+    top: 350px;
 }
-header a{
+
+header a {
     display: block;
-    border: 2px, solid, blue ;
+    border: 2px, solid, blue;
     padding: 50px;
     box-sizing: border-box;
-    }
-    a:hover{
-        color: brown;
-    }
-    .foto{
-        position: absolute;
-        top: 900px;
-        left: 20;
-        width: 200px;
-    }
-    #texto{
-        position: absolute;
-        left: 300px;
-        top: 500px;
-        width: 500px;
-    }
+}
+
+a:hover {
+    color: brown;
+}
+figure img{
+    position: absolute;
+    top: 500px;
+    right: 20px;
+    max-width: 40%;
+    max-height: 40%;
+}
+#texto {
+    position: absolute;
+    left: 300px;
+    top: 500px;
+    width: 500px;
+}
