--- a/assets/styles/style2.css
+++ b/assets/styles/style2.css
@@ -25,16 +25,17 @@ header h1 {
     color: brown;
     font-weight: bold;
     font-style: normal;
+    
 }
 header a {
     position: relative;
     bottom: 400px;
     left: 75%;    
     padding: 10px;
-    border: 2px, solid, black;
+    border: 1px solid black;
     background-color:blue;
     text-decoration: none;
-    box-shadow: 1px 2px 4px rgba(0,0,0,.5);
+    box-shadow: 1px 2px 6px rgba(0,0,0,.5);
     
     
 }
@@ -46,21 +47,23 @@ a:hover{
     position: absolute;
     left: 10px;
     width: 150px;
-    top: 350px;
+    top: 5px;
 }
 h2 {
     
     text-align: center;
     margin: 3px;
-    position: relative;
-    left: 400pz;
+    position: absolute;
+    left: 70px;
     top: 70px;
-    box-sizing: inherit;
+    color: brown;
     text-align: center;
+   
+    
 
 }
 h3 {
-    text-emphasis: bolt;
+    font-weight: bold;
 }
 
 
