--- a/assets/styles/style3.css
+++ b/assets/styles/style3.css
@@ -5,23 +5,19 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Comic Neue', cursive;
-
 }
 
 header figure {
     background: url(../img/design2-image2.jpg);
     height: 400px;
     background-size: cover;
-    background-position: 0px 50%;
-    position: relative;
-    top: 70px;
-
+    display: flex;
+    justify-content: flex-start;
 }
 
 header h1 {
-    position: absolute;
-    top: 0px;
-    left: 200px;
+    display: flex;
+    justify-content: center;
     font-size: 65px;
     color: brown;
     font-weight: bold;
@@ -32,6 +28,7 @@ header h1 {
 nav {
     display: flex;
     flex-direction: row-reverse;
+    justify-content: flex-start;
 }
 
 nav #home {
@@ -55,7 +52,6 @@ nav #contact {
 }
 
 header a {
-    position: relative;
     padding: 10px;
     border: 1px solid black;
     background-color: burlywood;
@@ -64,7 +60,6 @@ header a {
     color: black;
     font-weight: bolder;
     border-radius: 20%;
-
 }
 
 a:hover {
@@ -72,21 +67,27 @@ a:hover {
     color: aliceblue;
 }
 
-
 .logo {
-    position: absolute;
-    left: 10px;
-    width: 100px;
-    top: 10px;
+    width: 8%;
+    display: flex;
+    justify-self: flex-start;
 }
 
-h2 {
+.titulo-logo {
+    padding: 1px;
+    border: 2em;
+    display: flex;
+    justify-content: space-around;
+    justify-content: center;
 
+}
+
+
+h2 {
     text-align: center;
     margin: 10px;
-    position: relative;
-    left: 40px;
-    top: 80px;
+    display: flex;
+    justify-content: center;
     color: brown;
     text-shadow: 1px 2px 10px gray;
     text-decoration: underline;
@@ -97,28 +98,22 @@ h3 {
     font-weight: bold;
 }
 
-
 figure img {
-    position: relative;
-    top: 70px;
-    left: 17px;
-    bottom: 50%;
-    max-width: 50%;
-    max-height: 50%;
+
+    max-width: 70%;
+    max-height: 70%;
 }
 
-#texto {
-    position: absolute;
-    right: 30px;
-    top: 600px;
-    bottom: 20px;
-    width: 500px;
+.foto-texto {
+    display: flex;
+    justify-content: space-evenly;
+    justify-content: flex-end;
+    width: 1000px;
+    padding: 22px;
+    border: 5px;
 }
 
 #texto_rules {
-    position: absolute;
-    left: 10px;
-    top: 500px;
     border: 100px;
     padding: 100px;
     height: 900px;
@@ -134,20 +129,15 @@ figure img {
 }
 
 #texto_game {
-    position: absolute;
-    left: 120px;
-    top: 500px;
-    border: 100px;
-    padding: 100px;
-    height: 1000px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     justify-content: space-between;
 }
 
-
 #parrafo_game {
+    display: flex;
+    justify-content: center;
     text-decoration: underline;
     font-size: 20px;
 }
@@ -158,15 +148,14 @@ figure img {
     display: flex;
     align-items: center;
     align-content: space-between;
-
 }
 
 table tr>td {
     height: 40px;
     padding-left: 60px;
-  
 }
-th{
+
+th {
     font-size: 20px;
     text-decoration: underline;
 }
@@ -185,46 +174,50 @@ th{
     display: flex;
     justify-content: space-around;
     text-align: center;
-    }
+}
 
 caption {
     text-align: left;
 }
-form{
-    padding: 50px;    
-    display: flex;    
+
+form {
+    padding: 50px;
+    display: flex;
     flex-direction: column;
     gap: 25px;
-   
 }
-fieldset{
-   background-color:lavender;
-   padding: 30px;
-   border-radius: 8px;
-   box-shadow: 20px 20px 20px black;
+
+fieldset {
+    background-color: lavender;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 20px 20px 20px black;
 }
-.apart1{
+
+.apart1 {
     width: 100%;
     padding: 50px;
-    text-align: left;    
-    display: flex; 
+    text-align: left;
+    display: flex;
     align-self: flex-start;
     justify-items: center;
     justify-content: space-between;
-   
 }
-.foto{
+
+.foto {
     box-shadow: 10px 10px 30px black;
     display: flex;
-    align-self: flex-start;    
+    align-self: flex-start;
 }
-legend{
-   font-weight: bold;
-   text-align: center;
-   font-size: 20px;
-   font-style: italic;
+
+legend {
+    font-weight: bold;
+    text-align: center;
+    font-size: 20px;
+    font-style: italic;
 }
-.submit{
+
+.submit {
     width: 100px;
     height: 100px;
     background-color: lavender;
@@ -237,23 +230,27 @@ legend{
     align-items: center;
     justify-content: center;
 }
-.submit:hover{
-    background-color:blueviolet;
+
+.submit:hover {
+    background-color: blueviolet;
     color: aliceblue;
 }
-iframe{
+
+iframe {
     border-radius: 20px;
     box-shadow: 4px 2px 15px black;
     border: 1.5px solid blueviolet;
 }
-.about-main{
+
+.about-main {
     display: flex;
     flex-wrap: wrap;
     align-items: flex-end;
     align-content: space-around;
     gap: 50px;
 }
-#foto{
+
+#foto {
     box-shadow: 3px 3px 10px black;
     display: flex;
     align-content: space-between;
